# ChangeLog for app-vim/automatictexplugin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/automatictexplugin/ChangeLog,v 1.47 2014/04/12 09:40:06 ago Exp $

  12 Apr 2014; Agostino Sarubbo <ago@gentoo.org> automatictexplugin-12.4.ebuild:
  Stable for x86, wrt bug #502634

  11 Apr 2014; Chema Alonso <nimiux@gentoo.org> automatictexplugin-12.4.ebuild:
  Stable for amd64 wrt bug #502634

  25 Jan 2014; Tim Harder <radhermit@gentoo.org>
  -automatictexplugin-12.1.ebuild, -automatictexplugin-12.2.ebuild:
  Remove old.

*automatictexplugin-12.4 (25 Jan 2014)

  25 Jan 2014; Tim Harder <radhermit@gentoo.org>
  +automatictexplugin-12.4.ebuild:
  Version bump.

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> automatictexplugin-12.3.ebuild:
  Stable for amd64, wrt bug #474158

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> automatictexplugin-12.3.ebuild:
  Stable for x86, wrt bug #474158

*automatictexplugin-12.3 (03 May 2013)

  03 May 2013; Tim Harder <radhermit@gentoo.org>
  +automatictexplugin-12.3.ebuild:
  Version bump.

  23 Mar 2013; Tim Harder <radhermit@gentoo.org>
  -automatictexplugin-11.1.ebuild, -automatictexplugin-12.ebuild:
  Remove old.

*automatictexplugin-12.2 (23 Mar 2013)

  23 Mar 2013; Tim Harder <radhermit@gentoo.org>
  +automatictexplugin-12.2.ebuild:
  Version bump.

  04 Dec 2012; <ago@gentoo.org> automatictexplugin-12.1.ebuild:
  Stable for x86, wrt bug #441124

  03 Dec 2012; <ago@gentoo.org> automatictexplugin-12.1.ebuild:
  Stable for amd64, wrt bug #441122

*automatictexplugin-12.1 (26 Sep 2012)

  26 Sep 2012; Tim Harder <radhermit@gentoo.org>
  +automatictexplugin-12.1.ebuild:
  Version bump.

*automatictexplugin-12 (21 Sep 2012)

  21 Sep 2012; Tim Harder <radhermit@gentoo.org> +automatictexplugin-12.ebuild:
  Version bump.

  02 Sep 2012; Tim Harder <radhermit@gentoo.org> -automatictexplugin-11.ebuild:
  Remove old.
