@@ -3,24 +3,20 @@ Hash: SHA256
 
 DIST AutomaticTexPlugin_12.3.tar.gz 441368 SHA256 c63258f6a3e54c69c8953b92ba0dacd7d11e4db01de7063f5a93d32a293c543d SHA512 146a6a913f2367b6d279e6f50b5a27183e0c8b8a880f718ce40fdbd4f71fe506bd6a3375506f586252f8da312409ded71c8398f3aee43550782c49e4c9c829b0 WHIRLPOOL 59e1e54e5330986d1d7ff20eae69a7ba279b4632c5d36d5fd65dd82b373ad8c1fd2e36a4c04b9385025c1539dc1a7620d502ce7e2f490239cb8fd81ead9a3c4e
 DIST AutomaticTexPlugin_12.4.tar.gz 442017 SHA256 ab05081834a5f2d0cd31a3e774f3aa2823055902612e4fcf29e32edf0b3063a3 SHA512 a2de9385a59b7b73d9a258672bd674765c0c6fb9116c686e0836feac6296d4a1a33b5b96e24092956f97ef35abcf8bb481c86bb4148b6b16083d5e8d6f61b0c0 WHIRLPOOL 6ef351ecb5cb1f530170d5e50c5bfceb829820419d679f6cd4e37412b568d38df15a620a32fb457461345b87cc17ec494e03d60061f64c42b44316108ec002d7
+DIST AutomaticTexPlugin_12.5.tar.gz 442431 SHA256 1cec0d1573f33ec1afb1fb4171d12713f4b7e55841d16b0895805333eb781449 SHA512 93e48b3d7eb9bdc0319bf03d0ddc59f49c2aab63170030b4234fa83aa3aeb739f1384c4a94e09e630b82d328d9cbfbbdfbf493e6decff915ad9cd4d5b2fc3a5b WHIRLPOOL 3924add4e702ba5f5f08c21d06dea32ddf4c1d3f922536e14761b36d36b5408af7f252afba1603d49b5aaa456afb54c5457a9f9110c9bb61259c1aa6c53c4b90
 EBUILD automatictexplugin-12.3.ebuild 786 SHA256 13074bd784f1dfd24debe06f1028eea50cbc0e1f489afcc3f2ece8f2b8d99d52 SHA512 990348ae50996dda49a39ae239951af2209bb539b28eaa41566127a52e2d4795d529af0f4c12f7df2e7a404df48c7e1db3e862579ff24f2794af6c864a599915 WHIRLPOOL b3457a045f250f779eec0ec5aa8012e0f6c552de5afd76962b352d863c246a9b823b28e09b95a018e1204bd23f757a39d000e02df6087ca15cb298bbcd4714e1
 EBUILD automatictexplugin-12.4.ebuild 786 SHA256 cf7a1843c46b29cc2051cb2592eef57518ff6eb1058f6c06cc75627438d0a9ac SHA512 02c33d6f1d673bbdfd5bb08c3b9f3df66a53a93863a3f69bc440e7df85029d4dd24c88ca66314664d984017dab4796807b1386a9c52f20a824caa62dceeedbc6 WHIRLPOOL cc7e82de2a6e63d256386fbc1975d9ff593ff6a256d4ba37d998ada83d75022bb215a85ea579de34c152cf00f2a8c7668afb04d9876a4421c35ed57e6caf3b60
-MISC ChangeLog 6668 SHA256 6daa4d45e1144989f90672c2ffbb25201eba8eacced8d1ed60240ee6896e39f6 SHA512 90ae40b1337234e1cc09fbd3a7eec751a8b6bed6ca40d7de3ee4265fe555812d70d322fed4bcb5ebb9a724eb88a66f295a206c1fb8cb7e320a315687cfe9c34a WHIRLPOOL de6d7675827f33d350fbd5568d766924e581c62e5eda4dd34fc9d6d0dc37a3dcd605a689db6ea255c5384a5ddb611d65ec6db48481705855ee256ffe52f484bc
+EBUILD automatictexplugin-12.5.ebuild 794 SHA256 0224c39b3e82a3e3e4fd1589872d9dffdcf0b3751d201a781e8b0c28bc88c061 SHA512 958e79441e7e5f22a3629bde3f6b70a84f4ba787169f46f330a2233dbfa59ede3d2621725d28b28b6a5c151345dad55c48ba2cb73d7779c9b454d0981e612a65 WHIRLPOOL 4bd62355a22d23480dd4c9754ba9905936e4d3176b4c641e9f5f07da97625a1b1c55702ea4eb3d36ce9b589d9725ff0af537a0035cf21fb9b3f9fb30da612ee4
+MISC ChangeLog 6815 SHA256 fda8cca8bda465689d9b0718a57662895f8da6d8144b082375e18280e55d3419 SHA512 779fd8db0de05625a83af624596f0fdc33f9d023c758a549850e97e4a9f57c72870dd55ed8b500974b0d206e5890abd7327ed424364a4cdd144f4529347b9e7a WHIRLPOOL b49d77adb7ba80e3aa7606cfcabb976ac8397dec5ac949e47186cb426711a9a47fc65a34dfe0e968d8b4fdc57a97de5dd89538eb453cd78454adb8756440c707
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTSQn3AAoJELp701BxlEWfu8AP/3JyexSsVOEdEnZXJlxxRzP1
-RniCa/CGba2HCqVwwOeVl5QvvaT6kO43ysLnHLdsCqQE3DPFWuJ6wo0JukOznGJp
-PSIbFBkDRNKOuUv4N24dUoaNp6wXQKEQlfF2hG84F/4N2c9U1J/OroyojWbDvc1f
-WICciZe6zQf8gIdPhiPW8kl8s92vB6dth68EncVzFl8AkJXpsoy0B2Sa/3Ocy4Pd
-42vu36YEMujWsS5BXzHog2qmAUke09iAbBVE1st3reWcGPxwgco/GloL1aG0tKD6
-hpZMDqyDamsApeEKgnzqdWra5XGwWEdNNBMRwiDk1u+Zb4kyEIDLPY/W7X++lpGh
-xRjqE5b+PTLpsJHWl8HMnpxiHQhHHm2sq4LJLtz72ciDElqOak9P6BhlsrEt6Ogz
-zpUPefXxa9IWvA5GVepWz37EW6Ih+xwc0I0dWh39Dp1A19EezB2vfUbanjf2M7fn
-2SjylvFPfjKXsDBGkapY1HEdyKQVFIlAJBZGNaBi5dHnWWI79Uxv8eu66BxA5zy/
-GjAoRCnO72CujmtyfeuoCN5o0wi0J0rfxtFgp5boOmq7jRhOJwRCLbLcumDEb/5M
-9rb+wB++NN0TsqrFMDJzrCvhqDOQR698O8GyoOywQl8dZTaJi+HzJKhufdWkUDF7
-Y08d6HsXx7uSgQ/oBVkk
-=jsVO
+iQEcBAEBCAAGBQJTSbaPAAoJEEqz6FtPBkyj3GcIAIb2y+qmqPIomM9fS+Jqve+k
+afwSRuF8wUo0Wx+hqFtoPX1fZyCJ+zmsnZTgvvv9JN/4Vzhw75Iemixt/vMdpmZ/
+/bkW9Nh2qK1Q+T9vc2sBwhLCUUADeEL8A+fGvicp2akvqNWUj0MtNkIR6boz8Pgc
+Uz1DpHOlQfwy1abZkU0GTFzh8wT9dsSwx+jb5F4UQQPKxvwkW10HUdqdyIqM4fqN
+yh1xHeFQ/cke22F1MDM7tLt3mvyvH7VKddhHrFVHmWNqzLNxZa2cuZ6UUuSkJ7om
+oGKa6dSv5jy2AsPbBpo170Bh045kYReD9HBdqbLHh0anmzN5XdGzWPk+EmV0xqI=
+=t1lz
 -----END PGP SIGNATURE-----
