@@ -1,6 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST supertab-1.6.tar.gz 11890 SHA256 0fc29fe699459a12b3480470f3e66f0259c01f7db4ec338c094f244873f8441a SHA512 cafaa69e79381df7e82d953df4fb00c827fccf5adf98554d2aa378446fd6d34f5bbddc6fb5ed49176e5605bac610c5a6cfdaab5c720f03cc3284ca674f3aea12 WHIRLPOOL 64316ac3a0839db5e08b3f91318b1767a8c71628948e7b891b23c24ee4627d9d3ac98e813d3adef5ff25fb61e91a106cbfaa88e71f8d6cdf119f07b9653f269b
 DIST supertab-2.0.tar.bz2 11933 SHA256 8f733f8fbaa3f3a575eaada0825ff3150ffbccc2114d614a0c4dcf767c137906 SHA512 650ba60196f3c14ce5cd041466da80129d171b83b4e42bd585be93b06fa552e0e4f52d7dd5c9b458efdb41c184ad5e18d3274f82bb99410b047c29b913bacb9f WHIRLPOOL 134ca9e949478fcfddf15dbdeba2452f6c1a95513018b3ed26e58c8a32c66e70f7ce63ae3fee926857fb689571c1cde1a6c7182fa665117fc70e8e57cea08fa0
+DIST supertab-2.1.tar.gz 16585 SHA256 203d76597f2c183de2d6583de8f3b65423cba3090dda631b51e6eec32301ce1f SHA512 6daec863968be9aaefecb3388a8626f4ebf1c76899e460463fc64a56f15f743d3eae36b03588b5450a2c49b63ecdec8faf3476eda1a07cc48caf731eff77a592 WHIRLPOOL d0928f5a78b03d5e4d06e18fa198665f3fe333f264b55fd80d7c16cc4e01dc1845847308736417bb26688111db3c1ec4cb981c329043d670664ade74171b68b0
 EBUILD supertab-1.6.ebuild 655 SHA256 efa02fd5d9af40cce494ba151ce1fab553d59eb87a2eed58c1475b052467a06d SHA512 c8862854c97d97645d09b1240ad85b200ca04458549e0cb0c79e210a5fc3bca2b3b27b2f95c0937562abd4e8bff9ed2ffea1f26bae6bcce13f28f2d2feb8e6ae WHIRLPOOL a9305ebbdd892a6e86ec81860155fc2c92eeb3985530a93a111845b6fa07bc608baccfab5510e220cbecd0be1b2445f9f7116d63b4e9a644f9e1e2d038e39072
 EBUILD supertab-2.0.ebuild 453 SHA256 f83ee5f5bacdeacc23cff81e7d19b897cb06c60f4453512145505064f14c4527 SHA512 1c7ee28094f99b782982761d56ecc30b9f5ae7cb92371770d797979b67a4c6a173f71bb72064ba7c92d6db339c84e50b85e5d3a13a592816c14cc85e7568f645 WHIRLPOOL cf1184a1f036567f54ed0d1e38205c21a7b8049a67efd81519310e9a1d5e0dd0cb75a8eb4d7c888140c5a5eec89b920baebc984c8962d5e902a0d1d8d9b4f4f8
-MISC ChangeLog 4731 SHA256 180a1e73238b28f54c0c92b1cb7cdf33fe2f9324e89a1a690e37fc641774364a SHA512 06ab73a2c18395b3438dbeca7f19d952bf172602d1d5e7ec6b125340134e119404eeff753254b5a07903f7dcc642bb05c6c69878e4ec402eb33f21a6ed18a1de WHIRLPOOL bddc71633b591f552bffd83c56514da398a695e05b0220ad500866d5e44f8111f2973ec76b7ee90cb9c65aff9fa527f880dcd8065fc2a1e70ddc45c1c7f757c7
+EBUILD supertab-2.1.ebuild 585 SHA256 3417b1ad3f50de63a4ec620e9f88b044242d81e90eaa90e324e0c7162ae1a250 SHA512 c05be78211cb5eacb700e07d2bbf7c912d63518ae7c7949bbb3777e971dee2087a0405bd2d568b2e93237497f771cdbcd3725c512b6fc772397d13082e7a49b3 WHIRLPOOL 2adc5b19c4d6f79aab297bbdc8095cee4c950300c7a4567c7df7f466b8a3e3d1d0ff6250226a0f0cc77f870ce7e2c057d89d058b8117f687b2e40de5c3ef16e9
+MISC ChangeLog 4854 SHA256 f82016e601aead997634488c1a9e7962b20dcdde637b7fa50a496d9e02a41145 SHA512 a770bc574914ff6500b7ec2a7c10c5bcdbe3ea57617c61fdce9175d08c3f4028ccc387b99f587e0a6bc045f5e368d1421707e6c2c4d4ff60b4f51a5809ad4dc1 WHIRLPOOL 91dc5e6f9ca07047db3d85ba8b40015a0b99184a04a17be0d03ff65cc80537be5572073838f6772aba6b634c0d745d54e62c24d077990c6f895259416774e983
 MISC metadata.xml 157 SHA256 106c8618581360c66c2b535fcb7a6cb9ff318f1bd8e6c8f40f2f2f2d54e6787a SHA512 3b60e5c539f0940f297c22ce014cbecfbe31a7321c59384d9f1e8ee929b9685793b7231f49b2a153ddd1b89e3e5a56e5a304e11f321b28147ae47309a3272d70 WHIRLPOOL 22e97df7eb8669d9899254e880755052a8ef06dab300794173011b031a34c438bfc9de390e2a3bd2630927245c1055e789dd113078c2c6bafa7d4f723638a9d7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJTSbehAAoJEEqz6FtPBkyj+y8H/jnWxqcQrU6jI7WpTJke6Xy8
+9Ba1OVbugYqyJhAQTHvwL9wocNxE1koafje6l+Tz9H6y8hou7+kOQfoZ+AuCKcaO
+Ikp9lF+kUbtVsYQ1STjHwgzUqykvNkbLs4+8pigCNGeyuR/DAvMJcAgdGMxok9q3
+OqS3Ll2ysRbZC/geUQn1/l0lm9kh4Xp3/KtEtz23EWKo2GZqTD+ZYoqyiTBzZJ+T
+vamY918dwD1Cl9M1Wmg2Ce/YB44gkZBklQTV1i0wXLbXbrFAeztBr2SzQb5jIDzt
+8RJnh0ERBHXZu/P+Fce8otQA+HwuMNQnx9kd7x72+OCeROvf7GmeINVBPusXNR8=
+=YlB7
+-----END PGP SIGNATURE-----
