@@ -1,6 +1,11 @@
 # ChangeLog for app-vim/supertab
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/supertab/ChangeLog,v 1.44 2012/12/04 11:23:20 ago Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-vim/supertab/ChangeLog,v 1.45 2014/04/12 22:01:04 radhermit Exp $
+
+*supertab-2.1 (12 Apr 2014)
+
+  12 Apr 2014; Tim Harder <radhermit@gentoo.org> +supertab-2.1.ebuild:
+  Version bump.
 
   04 Dec 2012; <ago@gentoo.org> supertab-2.0.ebuild:
   Stable for x86, wrt bug #441130
